--- a/report.html
+++ b/report.html
@@ -371,7 +371,7 @@ summary {
 
 
 <div id="introduction" class="section level2">
-<h2>Introduction</h2>
+<h2>1. Introduction</h2>
 <p>The title is “<em>Measuring the temporal and spatial impact of events on pedestrian flows</em>”. The capstone project has been developed in University of Melbourne (UoM), Melbourne School of Engineering (MSE), Department of Infrastructure Engineering (IE) and it is composed by the team:</p>
 <ul>
 <li>Jessica Tong</li>
@@ -382,20 +382,27 @@ summary {
 </ul>
 </div>
 <div id="dataset" class="section level2">
-<h2>Dataset</h2>
-<p>The dataset was obtained on <a href="http://www.pedestrian.melbourne.vic.gov.au/">City of Melbourne - Pedestrian Counting System</a>.</p>
+<h2>2. Dataset</h2>
+<p>The dataset was obtained on <a href="http://www.pedestrian.melbourne.vic.gov.au/">City of Melbourne - Pedestrian Counting System</a>. The data is from pedestrian counting system (loop sensor) and it contains hourly counts from 2009 to 2019.</p>
 </div>
 <div id="method" class="section level2">
-<h2>Method</h2>
+<h2>2. Method</h2>
 <p>The proposed method is evaluate methods to automatically detect events occured in the city, understand the event behavior in terms of time and space.</p>
 <div id="time-domain" class="section level3">
 <h3>Time domain</h3>
 <p>For time domain was used Wavelet Transform to detect the events and figure out the total time that each event affect the city.</p>
 </div>
-</div>
-<div id="space-domain" class="section level2">
-<h2>Space domain</h2>
+<div id="space-domain" class="section level3">
+<h3>Space domain</h3>
 <p>In space domain the objective is identify the spread of the each type of event.</p>
+</div>
+</div>
+<div id="daily-report" class="section level2">
+<h2>3. Daily report</h2>
+<div id="section" class="section level3">
+<h3>21-07-2020</h3>
+<p>[] Code function to open pedestrian data [] There is some error with sunlight, correct them on dataset [] Time domain analysis [] Wavelet analysis [] Spatio analysis</p>
+</div>
 </div>
 
 
