add shiny app test

--- a/report.html
+++ b/report.html
@@ -386,7 +386,7 @@ summary {
 <p>The dataset was obtained on <a href="http://www.pedestrian.melbourne.vic.gov.au/">City of Melbourne - Pedestrian Counting System</a>. The data is from pedestrian counting system (loop sensor) and it contains hourly counts from 2009 to 2019.</p>
 </div>
 <div id="method" class="section level2">
-<h2>2. Method</h2>
+<h2>3. Method</h2>
 <p>The proposed method is evaluate methods to automatically detect events occured in the city, understand the event behavior in terms of time and space.</p>
 <div id="time-domain" class="section level3">
 <h3>Time domain</h3>
@@ -398,10 +398,21 @@ summary {
 </div>
 </div>
 <div id="daily-report" class="section level2">
-<h2>3. Daily report</h2>
+<h2>4. Daily report</h2>
 <div id="section" class="section level3">
 <h3>21-07-2020</h3>
-<p>[] Code function to open pedestrian data [] There is some error with sunlight, correct them on dataset [] Time domain analysis [] Wavelet analysis [] Spatio analysis</p>
+<ul>
+<li><input type="checkbox" disabled></input>
+Code function to open pedestrian data</li>
+<li><input type="checkbox" disabled></input>
+There is some error with sunlight, correct them on dataset</li>
+<li><input type="checkbox" disabled></input>
+Time domain analysis</li>
+<li><input type="checkbox" disabled></input>
+Wavelet analysis</li>
+<li><input type="checkbox" disabled></input>
+Spatio analysis</li>
+</ul>
 </div>
 </div>
 
