--- a/report.html
+++ b/report.html
@@ -388,6 +388,22 @@ summary {
 <div id="method" class="section level2">
 <h2>3. Method</h2>
 <p>The proposed method is evaluate methods to automatically detect events occured in the city, understand the event behavior in terms of time and space.</p>
+<table>
+<thead>
+<tr class="header">
+<th>Col1</th>
+<th>Col2</th>
+<th>Col3</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td>2</td>
+<td>3</td>
+</tr>
+</tbody>
+</table>
 <div id="time-domain" class="section level3">
 <h3>Time domain</h3>
 <p>For time domain was used Wavelet Transform to detect the events and figure out the total time that each event affect the city.</p>
